--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "keywords": [],
   "author": "Mohammed Hatim",
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
